[package]
name = "compile-times"
version = "0.1.0"
edition = "2021"



[dependencies]

# Зависимости из crates.io
#
# Опциональные потому что нужны только, если мы 
# пишем код приложения в модуле (см раздел features)
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = { version = "1.0.120", optional = true }

# Локальная зависимость на крейт comp
#
# Опциональная потому что нужны только, если мы 
# пишем код приложения в отдельном локальном крейте comp
# (см раздел features)
comp = { path = "./comp", optional = true }



[features]

# > cargo build --features mod
#
# нужна, чтобы произвести компиляцию приложения,
# используя только код в модуле app.rs
#
# эта фича активирует ещё 2 фичи - serde, serde_json
# эти фичи происходят из опциональных зависимостей
mod = ["serde", "serde_json"]


# > cargo build --features crate
#
# нужна, чтобы произвести компиляцию приложения,
# используя только код в отдельном крейте comp
#
# эта фича активирует ещё 1 фичу - comp
# эта фича происходит из опциональной зависимости на локальный
# крейт comp
crate = ["comp"]